update post page adding monument and meet card poi text

--- a/src/app/components/meet-card-poi/meet-card-poi.component.html
+++ b/src/app/components/meet-card-poi/meet-card-poi.component.html
@@ -24,7 +24,7 @@
                     width="20"
                     height="20"
                 />
-                <span class="ml-2 text-xl">{{ totalParticipants }} Participants</span>
+                <span class="ml-2 text-xl">Pour {{ totalParticipants }} personnes</span>
             </div>
             <div class="price-button">
                 <span *ngIf="priceTicketsParsed" class="price">{{
