--- a/src/app/components/meet-card/meet-card.component.html
+++ b/src/app/components/meet-card/meet-card.component.html
@@ -15,13 +15,18 @@
             </div>
         </ng-template>
         <div class="flex flex-col gap-2">
-            <div class="flex flex-row justify-between text-sm">
+            <div class="flex flex-col gap-2 justify-between text-sm">
                 <p>
                     Nombre de participant: <span class="font-semibold">{{ meet?.size }}</span>
                 </p>
-                <div *ngIf="meet?.ticketId" class="flex flex-row items-center gap-2">
-                    <p>Prix: {{ meet?.ticket?.price }}€</p>
-                    <p>Ticket: {{ meet?.ticket?.title }}</p>
+                <div *ngIf="meet?.ticketId" class="flex flex-row items-center gap-4">
+                    <p>
+                        Ticket: <span class="font-semibold">{{ meet?.ticket?.title }}</span>
+                    </p>
+                    <p>
+                        Prix total du billet:
+                        <span class="font-semibold">{{ meet?.ticket?.price }}€</span>
+                    </p>
                 </div>
             </div>
             <p>
