--- a/src/app/components/backoffice-sidenav/backoffice-sidenav.component.html
+++ b/src/app/components/backoffice-sidenav/backoffice-sidenav.component.html
@@ -2,6 +2,15 @@
     <ng-template pTemplate="header">
         <span class="font-semibold text-xl">BackOffice</span>
     </ng-template>
-    <p-listbox [options]="items" class="border-0" (onChange)="goTo()"> </p-listbox>
+    <p-listbox
+        [options]="items"
+        class="border-0"
+        [(ngModel)]="selectedItem"
+        (onChange)="goTo()"
+        [listStyle]="{ 'max-height': '50vh' }"
+    >
+    </p-listbox>
 </p-sidebar>
-<p-button (onClick)="sidebarVisible = true" icon="pi pi-arrow-right" />
+<div class="pt-2 ml-2">
+    <p-button (onClick)="sidebarVisible = true" icon="pi pi-bars" [text]="true" />
+</div>
