--- a/src/app/pages/backoffice-page/backoffice-page.component.html
+++ b/src/app/pages/backoffice-page/backoffice-page.component.html
@@ -56,7 +56,7 @@
                         (click)="goToStripe(user.stripeId)"
                     >
                         {{ user.stripeId }}
-                        <i class="pi pi-arrow-up-right ml-2" pBadge value="2"></i>
+                        <i class="pi pi-arrow-up-right ml-2" pBadge></i>
                     </div>
                     <div *ngIf="!user.stripeId">Non renseigné</div>
                 </td>
