--- a/src/app/components/friend-card/friend-card.component.html
+++ b/src/app/components/friend-card/friend-card.component.html
@@ -40,6 +40,7 @@
                         [rounded]="true"
                         icon="pi pi-comment"
                         *ngIf="user?.isFriend"
+                        (click)="navigateToConversation(user?.id)"
                         class="mr-2 button-element-2"
                     ></button>
                     <button
