add powered by stripe

--- a/src/app/components/payment-card/payment-card.component.html
+++ b/src/app/components/payment-card/payment-card.component.html
@@ -65,6 +65,13 @@
                 Valider
             </button>
         </form>
+        <img
+            ngSrc="assets/payment/powered_by_stripe.png"
+            width="150"
+            height="150"
+            alt="stripe"
+            class="mt-4 mb-2 ml-[50%] -translate-x-1/2"
+        />
         <div class="w-full h-4 bg-[var(--primary)] absolute bottom-0 left-0 rounded-b"></div>
         <p-progressBar
             mode="indeterminate"
