--- a/src/app/components/message/message.component.css
+++ b/src/app/components/message/message.component.css
@@ -4,7 +4,7 @@
   width: 40%;
 }
 
-.message.left {
+/*.message.left {
   background-color: var(--message);
   align-self: flex-start;
   border-bottom-left-radius: 20px;
@@ -21,10 +21,43 @@
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
 
-}
+}*/
 
 .message .time {
   display: block;
   font-size: 0.8em;
   color: #888;
+}
+
+.message.left {
+  flex-direction: row;
+}
+
+.message.right {
+  display: flex;
+  flex-direction: row-reverse;
+  text-align: right;
+}
+
+.message-avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin: 0 10px;
+}
+
+.message-content {
+  max-width: 80%;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.message.left .message-content {
+  background-color: var(--message);
+}
+
+.message.right .message-content {
+  width: 80%;
+  background-color: #2196F3;
+  color: white;
 }
