--- a/src/app/components/message/message.component.html
+++ b/src/app/components/message/message.component.html
@@ -2,17 +2,22 @@
     class="message"
     [ngClass]="{
         left: !myMessage,
+        flex: avatar,
         right: myMessage
     }"
 >
-    <p>
-        {{ message }}
-    </p>
-    <span
-        class="time"
-        [ngClass]="{
-            '!text-white': myMessage
-        }"
-        >{{ time }}</span
-    >
+    <img *ngIf="avatar" [src]="avatar" alt="Avatar" class="message-avatar" />
+    <div class="message-content" [ngClass]="{ 'w-4/6': avatar }">
+        <p class="text-xl font-semibold">{{ name }}</p>
+        <p>
+            {{ message }}
+        </p>
+        <span
+            class="time"
+            [ngClass]="{
+                '!text-white': myMessage
+            }"
+            >{{ time }}</span
+        >
+    </div>
 </div>
