multiple fixes + fix tests

--- a/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.css
+++ b/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.css
@@ -78,7 +78,7 @@
 .ticket-info {
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   margin-top: auto;
   color: var(--primary);
   font-weight: bold;
