--- a/src/app/container/profil/my-tickets/my-tickets.component.html
+++ b/src/app/container/profil/my-tickets/my-tickets.component.html
@@ -6,6 +6,6 @@
         ></app-my-ticket-card>
     </ng-container>
     <ng-template #noTickets>
-        <p class="text-center text-red-500">Vous n'avez aucun ticket pour le moment acheté</p>
+        <p class="text-center text-red-500">Vous n'avez aucun ticket acheté pour le moment</p>
     </ng-template>
 </div>
