--- a/src/app/pages/poi-page/poi-page.component.html
+++ b/src/app/pages/poi-page/poi-page.component.html
@@ -182,7 +182,7 @@
                     [done]="quest.done"
                 ></app-my-mission-card>
             </div>
-            <span *ngIf="meets.length === 0" class="text-2xl text-red-500 font-['Urbanist'] mt-6">
+            <span *ngIf="quests.length === 0" class="text-2xl text-red-500 font-['Urbanist'] mt-6">
                 Aucune missions n'est disponibles pour le moment, patience cela peut arriver très
                 vite</span
             >
