--- a/src/app/components/my-informations/my-informations.component.html
+++ b/src/app/components/my-informations/my-informations.component.html
@@ -2,8 +2,11 @@
     <div class="mt-3">
         <ng-container>
             <div class="flex flex-row items-center gap-2">
-                <p class="text-3xl font-bold text-['Urbanist']">
+                <p *ngIf="poiId === -1" class="text-3xl font-bold text-['Urbanist']">
                     {{ user?.firstname }} {{ user?.lastname }}
+                </p>
+                <p *ngIf="poiId !== -1" class="text-3xl font-bold text-['Urbanist']">
+                    {{ poi.name }}
                 </p>
                 <div
                     class="relative w-7 h-7 rounded-full border-2 border-solid border-black cursor-pointer"
@@ -20,7 +23,7 @@
             </div>
         </ng-container>
         <p class="text-xl mt-3 text-['Urbanist']">&#64;{{ user?.username }}</p>
-        <p class="text-md font-bold text-['Urbanist']">France</p>
+        <p *ngIf="poiId === -1" class="text-md font-bold text-['Urbanist']">France</p>
     </div>
     <div
         *ngIf="user && user.userTypeId !== 3"
