fix image ticket card

--- a/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.html
+++ b/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.html
@@ -4,7 +4,7 @@
         <div class="image-container">
             <img
                 [ngSrc]="
-                    ticket?.image?.url ??
+                    ticket?.poi?.cover?.url ??
                     'https://www.timographie360.fr/photos/realisations/principal/vignettes/visite-virtuelle-arc-triomphe_80.jpg'
                 "
                 alt="Ticket avatar"
