--- a/src/app/components/ticket-card/ticket-card.component.html
+++ b/src/app/components/ticket-card/ticket-card.component.html
@@ -4,7 +4,7 @@
             <div class="w-full h-[16rem] relative">
                 <img
                     ngSrc="{{
-                        ticket?.image?.url ??
+                        ticket?.poi?.cover?.url ??
                             'https://decizia.com/blog/wp-content/uploads/2017/06/default-placeholder.png'
                     }}"
                     alt="{{ ticket?.poiId }}"
