--- a/src/app/components/list-members-meet/list-members-meet.component.css
+++ b/src/app/components/list-members-meet/list-members-meet.component.css
@@ -31,6 +31,11 @@
 
 .user-status {
   text-align: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 4px;
 }
 
 .status-label {
@@ -45,6 +50,7 @@
   border-radius: 0.3rem;
   color: green;
   font-weight: bold;
+  width: fit-content;
 }
 
 .status-pending {
@@ -53,4 +59,5 @@
   border-radius: 0.3rem;
   color: gray;
   font-weight: bold;
+  width: fit-content;
 }
