--- a/src/app/components/meet-card/meet-card.component.html
+++ b/src/app/components/meet-card/meet-card.component.html
@@ -17,7 +17,7 @@
         <div class="flex flex-col gap-2">
             <div class="flex flex-col gap-2 justify-between text-sm">
                 <p>
-                    Nombre de participant: <span class="font-semibold">{{ meet?.size }}</span>
+                    Nombre de participants: <span class="font-semibold">{{ meet?.size }}</span>
                 </p>
                 <div *ngIf="meet?.ticketId" class="flex flex-row items-center gap-4">
                     <p>
