--- a/src/app/pages/profil-page/profil-page.component.html
+++ b/src/app/pages/profil-page/profil-page.component.html
@@ -62,7 +62,11 @@
                     >
                         Missions
                     </li>
-                    <li [class.active]="activeTab === 'profile'" (click)="setActiveTab('profile')">
+                    <li
+                        *ngIf="userType > -1 && userType < 3"
+                        [class.active]="activeTab === 'profile'"
+                        (click)="setActiveTab('profile')"
+                    >
                         Mon profil
                     </li>
                 </ul>
