--- a/src/app/components/message/message.component.css
+++ b/src/app/components/message/message.component.css
@@ -49,15 +49,20 @@
 .message-content {
   max-width: 80%;
   padding: 10px;
-  border-radius: 10px;
 }
 
 .message.left .message-content {
   background-color: var(--message);
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .message.right .message-content {
   width: 80%;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 10px;
   background-color: #2196F3;
   color: white;
 }
