--- a/src/app/components/message/message.component.html
+++ b/src/app/components/message/message.component.html
@@ -9,7 +9,7 @@
     <img *ngIf="avatar" [src]="avatar" alt="Avatar" class="message-avatar" />
     <div class="message-content" [ngClass]="{ 'w-4/6': avatar }">
         <p class="text-xl font-semibold">{{ name }}</p>
-        <p>
+        <p class="text-xl font-semibold">
             {{ message }}
         </p>
         <span
