--- a/src/app/pages/poi-page/poi-page.component.html
+++ b/src/app/pages/poi-page/poi-page.component.html
@@ -176,10 +176,11 @@
             </div>
             <div class="flex flex-row flex-nowrap gap-10 overflow-x-auto post-scrollbar p-4">
                 <app-my-mission-card
-                    *ngFor="let quest of quests"
+                    *ngFor="let quest of quests; index as i"
                     [quest]="quest"
                     [isPoi]="false"
                     [done]="quest.done"
+                    [questNbr]="i + 1"
                 ></app-my-mission-card>
             </div>
             <span *ngIf="quests.length === 0" class="text-2xl text-red-500 font-['Urbanist'] mt-6">
