change dropdown to autocomplete create post and meet

--- a/src/app/components/create-meet-card/create-meet-card.component.html
+++ b/src/app/components/create-meet-card/create-meet-card.component.html
@@ -52,25 +52,15 @@
         <div class="experience">
             <div class="monument">
                 <h3>Monument du meet</h3>
-                <p-dropdown
-                    [options]="poi"
+                <p-autoComplete
                     [(ngModel)]="selectedPoi"
-                    [filter]="true"
-                    filterBy="name"
-                    [showClear]="true"
+                    [suggestions]="poi"
+                    (ngModelChange)="updatePoiId()"
+                    [dropdown]="true"
+                    (completeMethod)="searchPoi($event)"
+                    optionLabel="name"
                     [virtualScroll]="true"
                     [virtualScrollItemSize]="38"
-                    optionLabel="name"
-                    class="w-full"
-                    [placeholder]="
-                        inputPoiId
-                            ? inputPoiName
-                            : loadingPoi
-                              ? 'Chargement...'
-                              : 'Sélectionne ton monument'
-                    "
-                    (ngModelChange)="updatePoiId()"
-                    [disabled]="inputPoiId !== undefined || loading || loadingPoi"
                 />
             </div>
             <h3>Nombre de personne maximum pour le meet</h3>
@@ -94,25 +84,15 @@
     <div *ngIf="reductionCheck">
         <div class="monument">
             <h3>Monument du meet</h3>
-            <p-dropdown
-                [options]="poi"
+            <p-autoComplete
                 [(ngModel)]="selectedPoi"
-                [filter]="true"
-                filterBy="name"
-                [showClear]="true"
+                [suggestions]="poi"
+                (ngModelChange)="updatePoiId()"
+                [dropdown]="true"
+                (completeMethod)="searchPoi($event)"
+                optionLabel="name"
                 [virtualScroll]="true"
                 [virtualScrollItemSize]="38"
-                optionLabel="name"
-                class="w-full"
-                [placeholder]="
-                    inputPoiId
-                        ? inputPoiName
-                        : loadingPoi
-                          ? 'Chargement...'
-                          : 'Sélectionne ton monument'
-                "
-                (ngModelChange)="updatePoiId()"
-                [disabled]="inputPoiId !== undefined || loading || loadingPoi"
             />
         </div>
 
