--- a/src/app/container/profil/my-posts/my-posts.component.html
+++ b/src/app/container/profil/my-posts/my-posts.component.html
@@ -28,7 +28,7 @@
     [modal]="true"
     [draggable]="false"
     [(visible)]="showDialog"
-    [style]="{ width: '50rem', borderRadius: '9999px' }"
+    [style]="{ width: '50rem', borderRadius: '9999px', height: '70rem' }"
     [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
 >
     <ng-template pTemplate="content">
