--- a/src/app/components/basket/basket.component.css
+++ b/src/app/components/basket/basket.component.css
@@ -88,6 +88,7 @@
 
 .cart-total {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin-top: 16px;
